fixed the wrapping of posters

--- a/src/CSS/browse.scss
+++ b/src/CSS/browse.scss
@@ -94,3 +94,94 @@
 }
 
 // 6.75 * 9.06
+
+.browseList {
+    height: 20rem;
+    margin-top: 5rem;
+
+    &-buttons {
+        &__left {
+            position: relative;
+
+            button {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+
+                :first-child {
+                    color: $main-link;
+                }
+                :nth-child(2) {
+                    color: #ccc;
+                    margin-left: 0.2rem;
+                }
+
+                :nth-child(3) {
+                    color: #ccc;
+                    margin-left: 0.5rem;
+
+                    transition: all 0.15s linear;
+                }
+            }
+        }
+
+        &__dropdown {
+            background-color: $main-gray;
+            color: #ccc;
+            position: absolute;
+            top: 150%;
+            left: 0;
+            width: 10rem;
+            z-index: 200;
+
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            button {
+                color: $main-link;
+                padding: 0.3rem 0;
+                margin-left: 1rem;
+
+                &:hover {
+                    color: #fff;
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        &__right {
+            width: 15%;
+            background-color: rebeccapurple;
+
+            button {
+                background-color: transparent;
+                color: #fff;
+                border: none;
+                cursor: pointer;
+            }
+        }
+    }
+
+    &-games {
+        width: 100%;
+        margin-top: 1rem;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+
+        &__list {
+            width: 85%;
+
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        &__filters {
+            background-color: peru;
+            width: 15%;
+            height: 10rem;
+        }
+    }
+}
